--- a/index.html
+++ b/index.html
@@ -1,201 +1,56 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>AFEF Airdrop — Claim</title>
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Inter:wght@400;600&display=swap" rel="stylesheet">
-<style>
-  :root{
-    --bg:#0b0b0b; --accent:#e6b23c; --muted:#bdbdbd;
-    --card:#111214; --glass: rgba(255,255,255,0.03);
-  }
-  html,body{height:100%;margin:0;font-family:Inter,system-ui,Arial;background:linear-gradient(180deg,#071018 0%, #0b0b0b 100%);color:#fff}
-  .wrap{min-height:100%;display:flex;align-items:center;justify-content:center;padding:32px}
-  .card{width:100%;max-width:900px;background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));border-radius:16px;padding:28px;box-shadow:0 10px 30px rgba(0,0,0,0.6);border:1px solid rgba(255,255,255,0.03)}
-  .hero{display:flex;gap:20px;align-items:center;flex-wrap:wrap}
-  .visual{width:220px;height:220px;display:flex;align-items:center;justify-content:center;position:relative}
-  /* shield */
-  .shield{width:160px;height:200px;background:linear-gradient(180deg,#2b1f15,#1f150e);border-radius:14px 14px 30px 30px;padding-top:18px;box-shadow: 0 8px 30px rgba(0,0,0,0.6), inset 0 -8px 20px rgba(0,0,0,0.35);border:6px solid var(--accent)}
-  .crown{position:absolute;top:6px;left:50%;transform:translateX(-50%);width:120px;height:44px;background:linear-gradient(180deg,var(--accent), #c4882a);border-radius:8px}
-  .shield-text{color:#fff;font-family:'Playfair Display', serif;font-weight:600;font-size:46px;letter-spacing:2px;text-align:center;margin-top:40px;color:#f7d58a}
-  /* small animated glow */
-  .glow{position:absolute;inset:-10px;border-radius:20px;filter:blur(14px);opacity:0.6;background: radial-gradient(closest-side, rgba(230,178,60,0.55), transparent 50%);animation: pulse 2.8s infinite}
-  @keyframes pulse{0%{transform:scale(0.95)}50%{transform:scale(1.05)}100%{transform:scale(0.95)}}
-  .content{flex:1;min-width:260px}
-  h1{margin:0;font-family:'Playfair Display',serif;font-weight:700;font-size:28px;color:var(--accent)}
-  p.lead{color:var(--muted);margin-top:10px;margin-bottom:18px}
-  .buttons{display:flex;gap:12px;flex-wrap:wrap;margin-top:12px}
-  .btn{background:transparent;border:2px solid rgba(255,255,255,0.06);padding:10px 16px;border-radius:10px;color:#fff;font-weight:600;cursor:pointer}
-  .btn.primary{background:linear-gradient(90deg,var(--accent), #d69a2f);border:none;color:#0b0b0b}
-  .status{margin-top:18px;padding:12px 14px;border-radius:10px;background:var(--glass);color:var(--muted);font-size:14px}
-  .foot{display:flex;gap:12px;align-items:center;margin-top:18px;flex-wrap:wrap}
-  .contract{font-family:monospace;color:#f2f2f2;word-break:break-all}
-  .tokenomics{display:flex;gap:18px;margin-top:18px;flex-wrap:wrap}
-  .tx{background:rgba(255,255,255,0.02);padding:12px;border-radius:10px}
-  .small{font-size:13px;color:var(--muted)}
-  @media(max-width:640px){.hero{flex-direction:column}.visual{order:0}}
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>AFEF Token | Official Site</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="wrap">
-    <div class="card" role="main">
-      <div class="hero">
-        <div class="visual" aria-hidden="true">
-          <div class="glow" style="z-index:0"></div>
-          <div class="shield" id="logoShield">
-            <div class="shield-text" id="shieldText">AFEF</div>
-          </div>
-          <div class="crown" style="z-index:2"></div>
-        </div>
-        <div class="content">
-          <h1>AFEF Airdrop — Claim Your Fan Tokens</h1>
-          <p class="lead">AFEF is the Age of Empires Fans token. Connect your wallet and claim your allocation. Limited early claim — one per wallet.</p>
+  <header>
+    <img src="afef-logo.png" alt="AFEF Logo" class="logo" />
+    <h1>AFEF Token</h1>
+    <h2>A New Era for Age of Empires Fans</h2>
+  </header>
 
-          <div class="buttons">
-            <button class="btn" id="connectBtn">Connect Wallet</button>
-            <button class="btn primary" id="claimBtn">Claim Airdrop</button>
-            <a class="btn" id="viewContract" href="#" target="_blank">View Contract</a>
-            <a class="btn" id="buyBtn" href="#" target="_blank">Buy on DEX</a>
-          </div>
+  <main>
+    <section class="info">
+      <p>
+        <b>AFEF</b> is a community-driven token built on Ethereum ERC20.
+        Inspired by the Age of Empires legacy, AFEF symbolizes unity, strength, and strategic growth for our holders.
+      </p>
+    </section>
 
-          <div class="status" id="status">Not connected</div>
+    <section class="details">
+      <h3>🔗 Token Details</h3>
+      <ul>
+        <li><b>Symbol:</b> AFEF</li>
+        <li><b>Contract Address:</b> 0x367a584a928b641330E8B20e7C4739675741f40d</li>
+        <li><b>Total Supply:</b> 4,950,000</li>
+        <li><b>Decimals:</b> 18</li>
+      </ul>
+    </section>
 
-          <div class="tokenomics">
-            <div class="tx"><strong>Total:</strong><div class="small">4,950,000 AFEF</div></div>
-            <div class="tx"><strong>Allocated for Airdrop:</strong><div class="small">150,000 AFEF</div></div>
-            <div class="tx"><strong>Contract:</strong><div class="contract small" id="contractAddr">Not set</div></div>
-          </div>
+    <section class="roadmap">
+      <h3>📜 Roadmap</h3>
+      <ul>
+        <li>Phase 1: Launch & Community Growth</li>
+        <li>Phase 2: Contract Verification & DEX Listing</li>
+        <li>Phase 3: 1,000 Holders & Marketing Push</li>
+        <li>Phase 4: Staking + CMC/CG Listings</li>
+      </ul>
+    </section>
 
-          <div class="foot">
-            <div class="small">Official email: <a href="mailto:empiresfantoken@outlook.com">empiresfantoken@outlook.com</a></div>
-            <div class="small">Join <a href="#" style="color:var(--accent)">Telegram</a> • <a href="#" style="color:var(--accent)">Twitter</a></div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+    <section class="links">
+      <h3>🌐 Links</h3>
+      <a href="https://etherscan.io/token/0x367a584a928b641330E8B20e7C4739675741f40d">Etherscan</a> |
+      <a href="https://x.com/AFEFtoken">Twitter</a> |
+      <a href="https://t.me/AFEFcommunity">Telegram</a>
+    </section>
+  </main>
 
-<script src="https://cdn.jsdelivr.net/npm/ethers@6.9.0/dist/ethers.min.js"></script>
-<script>
-/*
-  Configuration - edit these values to match your tokens/contract
-  - TOKEN_ADDRESS: the ERC-20 token contract (for showing, not required to call)
-  - CLAIM_CONTRACT_ADDRESS: optional: a contract that exposes claim() payable or non-payable. If empty, will POST address to api endpoint.
-  - NETWORK: chain name (used only for explorer link)
-  - API_CLAIM_ENDPOINT: optional server endpoint that will receive claims if no claim contract
-*/
-const CONFIG = {
-  TOKEN_ADDRESS: '0x367a584a928b641330E8B20e7C4739675741f40d',
-  CLAIM_CONTRACT_ADDRESS: '', // empty = use webhook/manual flow
-  NETWORK: 'ethereum',
-  API_CLAIM_ENDPOINT: 'https://<Afef Coin>.netlify.app/.netlify/functions/claim'
-};
-
-};
-
-// display contract
-document.getElementById('contractAddr').textContent = CONFIG.TOKEN_ADDRESS;
-document.getElementById('viewContract').href = `https://etherscan.io/token/${CONFIG.TOKEN_ADDRESS}`;
-document.getElementById('buyBtn').href = `https://app.uniswap.org/#/swap?outputCurrency=${CONFIG.TOKEN_ADDRESS}`;
-
-// basic UI
-const connectBtn = document.getElementById('connectBtn');
-const claimBtn = document.getElementById('claimBtn');
-const status = document.getElementById('status');
-
-let provider, signer, userAddress;
-
-async function detectProvider() {
-  if (window.ethereum) {
-    provider = new ethers.BrowserProvider(window.ethereum);
-    return true;
-  }
-  return false;
-}
-
-async function connectWallet() {
-  try {
-    if (!await detectProvider()) {
-      status.textContent = 'No Web3 provider found. Install MetaMask.';
-      return;
-    }
-    await provider.send("eth_requestAccounts", []);
-    signer = await provider.getSigner();
-    userAddress = await signer.getAddress();
-    status.textContent = `Connected: ${short(userAddress)}`;
-    connectBtn.textContent = 'Connected';
-  } catch (e) {
-    console.error(e);
-    status.textContent = 'Connection failed';
-  }
-}
-
-function short(addr){ if(!addr) return ''; return addr.slice(0,6)+'...'+addr.slice(-4); }
-
-// claim flow
-async function claimAirdrop() {
-  if (!userAddress) {
-    status.textContent = 'Please connect your wallet first.';
-    return;
-  }
-  claimBtn.disabled = true;
-  status.textContent = 'Processing claim...';
-
-  try {
-    if (CONFIG.CLAIM_CONTRACT_ADDRESS) {
-      // call claim() on your claim/smart contract
-      const abi = [
-        "function claim() external",
-        "function claim(address) external"
-      ];
-      const contract = new ethers.Contract(CONFIG.CLAIM_CONTRACT_ADDRESS, abi, signer);
-      // try calling claim()
-      let tx;
-      try {
-        tx = await contract.claim();
-      } catch(err) {
-        // fallback if contract uses claim(address)
-        tx = await contract.claim(userAddress);
-      }
-      status.textContent = 'Waiting for transaction confirmation...';
-      await tx.wait();
-      status.textContent = 'Claim successful! Check your wallet.';
-    } else {
-      // no claim contract - send address to your server webhook for manual processing
-      if (!CONFIG.API_CLAIM_ENDPOINT || CONFIG.API_CLAIM_ENDPOINT.includes('example.com')) {
-        status.textContent = 'No claim contract or API configured. Admin must process manual airdrop.';
-        claimBtn.disabled = false;
-        return;
-      }
-      const resp = await fetch(CONFIG.API_CLAIM_ENDPOINT, {
-        method:'POST',
-        headers: {'Content-Type':'application/json'},
-        body: JSON.stringify({ address: userAddress, timestamp: Date.now() })
-      });
-      const data = await resp.json();
-      if (resp.ok) {
-        status.textContent = 'Claim request submitted. You will receive tokens once processed.';
-      } else {
-        status.textContent = `Claim failed: ${data?.message || resp.statusText}`;
-      }
-    }
-  } catch (err) {
-    console.error(err);
-    status.textContent = 'Claim failed. See console for details.';
-  } finally {
-    claimBtn.disabled = false;
-  }
-}
-
-connectBtn.addEventListener('click', connectWallet);
-claimBtn.addEventListener('click', claimAirdrop);
-
-// show simple animation for shield text (optional)
-let letters = ['AFEF','AFE','AFEF','AFE'];
-let idx = 0;
-setInterval(()=>{ document.getElementById('shieldText').textContent = letters[idx%letters.length]; idx++; }, 2000);
-
-</script>
+  <footer>
+    <p>© 2025 AFEF Community. Built by fans, for fans.</p>
+  </footer>
 </body>
 </html>
