--- a/index.html
+++ b/index.html
@@ -464,8 +464,8 @@
         <div class="container">
             <p>&copy; 2024 AFEF Coin. Tüm Hakları Saklıdır.</p>
             <div class="social-links">
-                <a href="https://twitter.com/afefcoinofficial" target="_blank" aria-label="Twitter"><img src="https://img.icons8.com/ios-filled/24/F5DEB3/twitterx.png" alt="Twitter"></a>
-                <a href="https://t.me/afefcoincommunity" target="_blank" aria-label="Telegram"><img src="https://img.icons8.com/ios-filled/24/F5DEB3/telegram-app.png" alt="Telegram"></a>
+                <a href="https://x.com/afeftoken?s=21" target="_blank" aria-label="Twitter"><img src="https://img.icons8.com/ios-filled/24/F5DEB3/twitterx.png" alt="Twitter"></a>
+                <a href="https://t.me/afeftoken" target="_blank" aria-label="Telegram"><img src="https://img.icons8.com/ios-filled/24/F5DEB3/telegram-app.png" alt="Telegram"></a>
                 </div>
         </div>
     </footer>
