--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                 </div>
                 <p style="text-align: center; margin-top: 30px;">
                     <strong>Contract Address:</strong> <span style="font-family: monospace; background-color: rgba(255,255,255,0.1); padding: 5px 10px; border-radius: 5px;">0x...YourContractAddress...</span> 
-                    <button onclick="copyToClipboard('0x...YourContractAddress...')">Copy</button>
+                    <button onclick="copyToClipboard(0x367a584a928b641330E8B20e7C4739675741f40d)">Copy</button>
                 </p>
             </div>
         </section>
@@ -429,9 +429,9 @@
                 <h2 class="section-title">Contact Us</h2>
                 <p>Feel free to reach out for questions, collaborations, or feedback.</p>
                 <p>
-                    <strong>Email:</strong> <a href="mailto:info@afefcoin.com">info@afefcoin.com</a> <br>
-                    <strong>Telegram:</strong> <a href="https://t.me/afefcoincommunity" target="_blank">t.me/afefcoincommunity</a> <br>
-                    **Twitter (X):** <a href="https://twitter.com/afefcoinofficial" target="_blank">@afefcoinofficial</a>
+                    <strong>Email:</strong> <a href="mailto:empiresfantoken@outlook.com">info@afefcoin.com</a> <br>
+                    <strong>Telegram:</strong> <a href="https://t.me/afeftoken" target="_blank">t.me/afefcoincommunity</a> <br>
+                    **Twitter (X):** <a href="https://x.com/afeftoken?s=21" target="_blank">@afefcoinofficial</a>
                 </p>
                 
                 <form name="contact" method="POST" data-netlify="true">
@@ -449,8 +449,8 @@
         <div class="container">
             <p>&copy; 2024 AFEF Coin. All Rights Reserved.</p>
             <div class="social-links">
-                 <a href="https://twitter.com/afefcoinofficial" target="_blank" aria-label="Twitter"><img src="https://img.icons8.com/ios-filled/24/F5DEB3/twitterx.png" alt="Twitter"></a>
-                <a href="https://t.me/afefcoincommunity" target="_blank" aria-label="Telegram"><img src="https://img.icons8.com/ios-filled/24/F5DEB3/telegram-app.png" alt="Telegram"></a>
+                 <a href="https://x.com/afeftoken?s=21" target="_blank" aria-label="Twitter"><img src="https://img.icons8.com/ios-filled/24/F5DEB3/twitterx.png" alt="Twitter"></a>
+                <a href="https://t.me/afeftoken" target="_blank" aria-label="Telegram"><img src="https://img.icons8.com/ios-filled/24/F5DEB3/telegram-app.png" alt="Telegram"></a>
             </div>
         </div>
     </footer>
