--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AFEF Coin - The Fan Token for Age of Empires Mobile</title>
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
+    <title>AFEF Token - The Fan Token for Age of Empires Mobile</title> <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         /* NEW VIBRANT COLOR PALETTE */
@@ -313,7 +312,7 @@
 <body>
     <nav>
         <div class="container">
-            <a href="#" class="logo">AFEF Coin</a>
+            <a href="#" class="logo">AFEF Token</a>
             <div class="hamburger">
                 <div class="bar"></div>
                 <div class="bar"></div>
@@ -333,8 +332,7 @@
 
     <header>
         <div class="container">
-            <h1>AFEF Coin</h1>
-            <p>The Next-Gen Fan Token for Age of Empires Mobile Players!</p>
+            <h1>AFEF Token</h1> <p>The Next-Gen Fan Token for Age of Empires Mobile Players!</p>
             <a href="#about" class="cta-button">Explore AFEF Universe</a>
         </div>
     </header>
@@ -342,8 +340,7 @@
     <main>
         <section id="about" class="animated">
             <div class="container">
-                <h2 class="section-title">What is AFEF Coin?</h2>
-                <p>AFEF Coin is a fan token specially designed for the thriving community of the legendary strategy game, Age of Empires Mobile. It empowers players and loyal fans with unique opportunities to influence the project's evolution, gain access to exclusive events, and potentially unlock powerful in-game advantages in the future.</p>
+                <h2 class="section-title">What is AFEF Token?</h2> <p>AFEF Token is a fan token specially designed for the thriving community of the legendary strategy game, Age of Empires Mobile. It empowers players and loyal fans with unique opportunities to influence the project's evolution, gain access to exclusive events, and potentially unlock powerful in-game advantages in the future.</p>
                 <p>Our core mission is to seamlessly merge the rich Age of Empires universe with cutting-edge blockchain technology, fostering a stronger, more engaged community and delivering tangible value to every AFEF token holder.</p>
             </div>
         </section>
@@ -379,8 +376,7 @@
         <section id="tokenomics" class="animated">
             <div class="container">
                 <h2 class="section-title">Tokenomics</h2>
-                <p style="text-align: center; font-size: 1.1em;">Discover the fair and transparent distribution model of AFEF Coin:</p>
-                <div class="infographic-grid">
+                <p style="text-align: center; font-size: 1.1em;">Discover the fair and transparent distribution model of AFEF Token:</p> <div class="infographic-grid">
                     <div class="infographic-item">
                         <h3>Total Supply</h3>
                         <p>1,000,000,000 AFEF</p>
@@ -419,8 +415,7 @@
                     <div class="timeline-item timeline-item-left">
                         <div class="timeline-content">
                             <h3>Q4 2024 - The Genesis</h3>
-                            <p>AFEF Coin Smart Contract Development & Rigorous Audit. Kick-off of the inaugural Airdrop Campaign to reward early supporters.</p>
-                        </div>
+                            <p>AFEF Token Smart Contract Development & Rigorous Audit. Kick-off of the inaugural Airdrop Campaign to reward early supporters.</p> </div>
                     </div>
                     <div class="timeline-item timeline-item-right">
                         <div class="timeline-content">
@@ -453,9 +448,8 @@
         <section id="transactions" class="animated">
             <div class="container">
                 <h2 class="section-title">Transactions History</h2>
-                <p style="text-align: center; font-size: 1.1em;">Explore AFEF Coin's on-chain activity and ensure transparency.</p>
-                <p style="text-align: center; font-size: 1em; color: var(--light-grey);">
-                    While we're building our in-house transaction viewer, you can view all AFEF Coin transactions directly on Etherscan:
+                <p style="text-align: center; font-size: 1.1em;">Explore AFEF Token's on-chain activity and ensure transparency.</p> <p style="text-align: center; font-size: 1em; color: var(--light-grey);">
+                    While we're building our in-house transaction viewer, you can view all AFEF Token transactions directly on Etherscan:
                 </p>
                 <div style="text-align: center; margin-top: 20px;">
                     <a href="https://etherscan.io/token/0x367a584a928b641330E8B20e7C4739675741f40d" target="_blank" class="etherscan-link">View All Transactions on Etherscan <i class="fas fa-external-link-alt"></i></a>
@@ -465,14 +459,13 @@
         
         <section id="donate" class="animated">
             <div class="container">
-                <h2 class="section-title">Support AFEF Coin Development</h2>
-                <p style="text-align: center; font-size: 1.1em;">Your contributions help us grow, develop new features, and expand our community. Every donation fuels the Age of Empires Mobile fan token revolution!</p>
+                <h2 class="section-title">Support AFEF Token Development</h2> <p style="text-align: center; font-size: 1.1em;">Your contributions help us grow, develop new features, and expand our community. Every donation fuels the Age of Empires Mobile fan token revolution!</p>
                 <p style="text-align: center; margin-top: 30px;">
                     <strong>Donation Wallet (ERC-20 Compatible):</strong>
                     <p class="wallet-address">
-                        0xB280e1DD3EEa9027cC04798A22F85b54e5B888bD
+                        0x...YOUR_DONATION_WALLET_ADDRESS...
                     </p>
-                    <button onclick="copyToClipboard('0xB280e1DD3EEa9027cC04798A22F85b54e5B888bD.')">Copy Wallet Address <i class="fas fa-copy"></i></button>
+                    <button onclick="copyToClipboard('0x...YOUR_DONATION_WALLET_ADDRESS...')">Copy Wallet Address <i class="fas fa-copy"></i></button>
                 </p>
             </div>
         </section>
@@ -499,8 +492,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 AFEF Coin. All Rights Reserved.</p>
-            <div class="social-links">
+            <p>&copy; 2024 AFEF Token. All Rights Reserved.</p> <div class="social-links">
                  <a href="https://x.com/afeftoken?s=21" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
                 <a href="https://t.me/afeftoken" target="_blank" aria-label="Telegram"><i class="fab fa-telegram-plane"></i></a>
             </div>
@@ -510,10 +502,23 @@
     <script>
         const hamburger = document.querySelector('.hamburger');
         const navLinks = document.querySelector('.nav-links');
+        const allNavLinks = document.querySelectorAll('.nav-links a'); // Get all links in the menu
 
+        // Toggle menu on hamburger click
         hamburger.addEventListener('click', () => {
             hamburger.classList.toggle('active');
             navLinks.classList.toggle('active');
+        });
+
+        // NEW: Add functionality to close menu on link click
+        allNavLinks.forEach(link => {
+            link.addEventListener('click', () => {
+                // If the menu is open, close it
+                if (navLinks.classList.contains('active')) {
+                    hamburger.classList.remove('active');
+                    navLinks.classList.remove('active');
+                }
+            });
         });
 
         // Simple animation trigger on scroll
