--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
                     <p class="wallet-address">
                         0xB280e1DD3EEa9027cC04798A22F85b54e5B888bD
                     </p>
-                    <button onclick="copyToClipboard('0xB280e1DD3EEa9027cC04798A22F85b54e5B888bD')">Copy Wallet Address <i class="fas fa-copy"></i></button>
+                    <button onclick="copyToClipboard('0xB280e1DD3EEa9027cC04798A22F85b54e5B888bD.')">Copy Wallet Address <i class="fas fa-copy"></i></button>
                 </p>
             </div>
         </section>
@@ -486,9 +486,9 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 AFEF Token. All Rights Reserved.</p>
+            <p>&copy; 2025 AFEF Token. All Rights Reserved.</p>
             <div class="social-links">
-                 <a href="https://x.com/afeftoken?s=21" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                 <a href="https://x.com/afeftoken?s=21" target="_blank" aria-label="Twitter"><i class="fab fa-x-twitter"></i></a>
                 <a href="https://t.me/afeftoken" target="_blank" aria-label="Telegram"><i class="fab fa-telegram-plane"></i></a>
             </div>
         </div>
